@@ -1851,6 +1851,8 @@ FUNCS += functions/gnutls_record_send_range
 FUNCS += functions/gnutls_record_send_range.short
 FUNCS += functions/gnutls_record_set_max_early_data_size
 FUNCS += functions/gnutls_record_set_max_early_data_size.short
+FUNCS += functions/gnutls_record_set_max_recv_size
+FUNCS += functions/gnutls_record_set_max_recv_size.short
 FUNCS += functions/gnutls_record_set_max_size
 FUNCS += functions/gnutls_record_set_max_size.short
 FUNCS += functions/gnutls_record_set_state
