@@ -727,6 +727,7 @@ APIMANS += gnutls_record_send2.3
 APIMANS += gnutls_record_send_early_data.3
 APIMANS += gnutls_record_send_range.3
 APIMANS += gnutls_record_set_max_early_data_size.3
+APIMANS += gnutls_record_set_max_recv_size.3
 APIMANS += gnutls_record_set_max_size.3
 APIMANS += gnutls_record_set_state.3
 APIMANS += gnutls_record_set_timeout.3
