@@ -81,6 +81,12 @@ _gnutls_record_size_limit_recv_params(gnutls_session_t session,
 
 	session->internals.hsk_flags |= HSK_RECORD_SIZE_LIMIT_NEGOTIATED;
 
+	/* client uses the reception of this extension as an
+	 * indication of the request was accepted by the server */
+	if (session->security_parameters.entity == GNUTLS_CLIENT)
+		session->security_parameters.max_record_recv_size =
+			session->security_parameters.max_user_record_recv_size;
+
 	_gnutls_handshake_log("EXT[%p]: record_size_limit %u negotiated\n",
 			      session, (unsigned)new_size);
 
@@ -89,9 +95,9 @@ _gnutls_record_size_limit_recv_params(gnutls_session_t session,
 	if (unlikely(vers == NULL))
 		return gnutls_assert_val(GNUTLS_E_INTERNAL_ERROR);
 
-	session->security_parameters.max_record_recv_size =
+	session->security_parameters.max_record_send_size =
 		MIN(new_size - vers->tls13_sem,
-		    session->security_parameters.max_record_send_size);
+		    session->security_parameters.max_user_record_send_size);
 
 	return 0;
 }
@@ -105,11 +111,11 @@ _gnutls_record_size_limit_send_params(gnutls_session_t session,
 	int ret;
 	uint16_t send_size;
 
-	assert(session->security_parameters.max_record_send_size >= 64 &&
-	       session->security_parameters.max_record_send_size <=
+	assert(session->security_parameters.max_user_record_recv_size >= 64 &&
+	       session->security_parameters.max_user_record_recv_size <=
 	       DEFAULT_MAX_RECORD_SIZE);
 
-	send_size = session->security_parameters.max_record_send_size;
+	send_size = session->security_parameters.max_user_record_recv_size;
 
 	if (session->security_parameters.entity == GNUTLS_SERVER) {
 		const version_entry_st *vers;
@@ -123,6 +129,9 @@ _gnutls_record_size_limit_send_params(gnutls_session_t session,
 		vers = get_version(session);
 		if (unlikely(vers == NULL))
 			return gnutls_assert_val(GNUTLS_E_INTERNAL_ERROR);
+
+		session->security_parameters.max_record_recv_size =
+			send_size;
 
 		send_size += vers->tls13_sem;
 	} else {
