@@ -1447,6 +1447,7 @@ int gnutls_record_get_direction(gnutls_session_t session);
 
 size_t gnutls_record_get_max_size(gnutls_session_t session);
 ssize_t gnutls_record_set_max_size(gnutls_session_t session, size_t size);
+ssize_t gnutls_record_set_max_recv_size(gnutls_session_t session, size_t size);
 
 size_t gnutls_record_check_pending(gnutls_session_t session);
 size_t gnutls_record_check_corked(gnutls_session_t session);
